test/corpus/classes.txt
================================================================================
Classes
================================================================================

class Empty
class Empty2 {}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier))
  (class_declaration
    name: (simple_identifier)
    body: (class_body)))

================================================================================
Class with methods
================================================================================

class HelloWorld {
  fun a() {}

  fun b() {}
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
       name: (simple_identifier)
       parameters: (function_value_parameters)
       body: (function_body
        (block)))
      (function_declaration
       name: (simple_identifier)
       parameters: (function_value_parameters)
        body: (function_body
          (block))))))

================================================================================
Generic class
================================================================================

class Container<T> {}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    body: (class_body)))

================================================================================
Class with methods and expressions
================================================================================

class Strings {
  fun aString() = "Hello World!"

  fun anotherString() = "Hello" + " " + "World"
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
       name: (simple_identifier)
       parameters: (function_value_parameters)
       body: (function_body
        expression: (string_literal 
          (string_content))))
      (function_declaration
       name: (simple_identifier)
       parameters: (function_value_parameters)
       body: (function_body
        expression: (additive_expression
          (additive_expression
              (string_literal (string_content))
              (string_literal (string_content)))
            (string_literal (string_content))))))))

================================================================================
Class with modifiers
================================================================================

internal open class Test {
  private abstract inline fun test()
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (visibility_modifier)
      (inheritance_modifier))
    name: (simple_identifier)
    body: (class_body
      (function_declaration
        modifiers: (modifiers
         (visibility_modifier)
         (inheritance_modifier)
         (function_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters)))))

================================================================================
Objects
================================================================================

object Singleton {
  fun test()
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
       name: (simple_identifier)
       parameters: (function_value_parameters)))))

================================================================================
Primary constructors
================================================================================

data class Vector2D(
  val x: Int,
  val y: Int
)

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (class_modifier))
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))))

================================================================================
Inheritance
================================================================================

class A : B() {}

class C(param: Int) : D(param)

class D : SomeInterface

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (delegation_specifier
      (constructor_invocation
        (user_type
          (type_identifier))
        (value_arguments)))
    body: (class_body))
  (class_declaration
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    (delegation_specifier
      (constructor_invocation
        (user_type
          (type_identifier))
        (value_arguments
          (value_argument
            (simple_identifier))))))
  (class_declaration
    name: (simple_identifier)
    (delegation_specifier
      (user_type
        (type_identifier)))))

================================================================================
Properties
================================================================================

class Something {
  val x: Int = 4
  var y: Int?
  val z: Int get() = x
  val s = "s"
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (property_declaration
        (binding_pattern_kind)
        var_decl:
        (variable_declaration
          id: (simple_identifier)
          type: (user_type
            (type_identifier)))
        initializer: (integer_literal))
      (property_declaration
        (binding_pattern_kind)
        var_decl:
        (variable_declaration
          id: (simple_identifier)
          type: (nullable_type
            type: (user_type
              (type_identifier)))))
      (property_declaration
        (binding_pattern_kind)
        var_decl:
        (variable_declaration
          id: (simple_identifier)
          type: (user_type
            (type_identifier)))
        (getter
          (function_body
            expression: (simple_identifier))))
      (property_declaration
        (binding_pattern_kind)
        var_decl: (variable_declaration
          id: (simple_identifier))
        initializer: (string_literal
          (string_content))))))    

================================================================================
Constructor delegation calls
================================================================================

class Test(x: Int, y: Int) {
  constructor() : this(0, 0)
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))
        (class_parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    body: (class_body
      (secondary_constructor 
        parameters: (function_value_parameters)
          (constructor_delegation_call
            (value_arguments
              (value_argument
                (integer_literal))
              (value_argument
                (integer_literal))))))))

================================================================================
Enum classes
================================================================================

enum class Suit {
  DIAMONDS, CLOVERS, HEARTS, SPADES
}

enum class Color(val rgb: Int) {
  RED(0xFF0000),
  GREEN(0x00FF00),
  BLUE(0x0000FF);

  override fun toString() = rgb.toString(16)
}

enum class ProtocolState {
  WAITING {
      override fun signal() = TALKING
  },
  TALKING {
      override fun signal() = WAITING
  };
  abstract fun signal(): ProtocolState
}

enum class Enum {
 @SerialName("constant")
 Constant
}

--------------------------------------------------------------------------------

(source_file
  (enum_class_declaration
    name: (simple_identifier)
    body: (enum_class_body
      (enum_entry
        name: (simple_identifier))
      (enum_entry
        name: (simple_identifier))
      (enum_entry
        name: (simple_identifier))
      (enum_entry
        name: (simple_identifier))))
  (enum_class_declaration
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    body: (enum_class_body
      (enum_entry
        name: (simple_identifier)
        arguments: (value_arguments
          (value_argument
            (hex_literal))))
      (enum_entry
        name: (simple_identifier)
        arguments: (value_arguments
          (value_argument
            (hex_literal))))
      (enum_entry
        name: (simple_identifier)
        arguments: (value_arguments
          (value_argument
            (hex_literal))))
      (function_declaration
        modifiers: (modifiers
          (member_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body
          expression: (call_expression
            expression: (dot_qualified_expression
              receiver: (simple_identifier)
              selector: (simple_identifier))
            args: (value_arguments
              (value_argument
                (integer_literal))))))))
  (enum_class_declaration
    name: (simple_identifier)
    body: (enum_class_body
      (enum_entry
        name: (simple_identifier)
        body: (class_body
          (function_declaration
            modifiers: (modifiers
              (member_modifier))
            name: (simple_identifier)
            parameters: (function_value_parameters)
            body: (function_body
              expression: (simple_identifier)))))
      (enum_entry
        name: (simple_identifier)
        body: (class_body
          (function_declaration
            modifiers: (modifiers
              (member_modifier))
            name: (simple_identifier)
            parameters: (function_value_parameters)
            body: (function_body
              expression: (simple_identifier)))))
      (function_declaration
        modifiers: (modifiers
          (inheritance_modifier))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        type: (user_type
          (type_identifier)))))
  (enum_class_declaration
    name: (simple_identifier)
    body: (enum_class_body
      (enum_entry
        modifiers: (modifiers
          (annotation
            (constructor_invocation
              (user_type
                (type_identifier))
              (value_arguments
                (value_argument
                  (string_literal
                    (string_content)))))))
        name: (simple_identifier)))))

================================================================================
Data class with hanging comma
================================================================================

data class JwtConfiguration(
   val audience: String,
   val realm: String,
)

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (class_modifier))
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))))

================================================================================
Value class: https://kotlinlang.org/docs/inline-classes.html
================================================================================

@JvmInline
value class Password(private val s: String)

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (annotation
        (user_type
          (type_identifier)))
      (class_modifier))
    name: (simple_identifier)
    (primary_constructor
      (class_parameters
        (class_parameter
          modifiers: (modifiers
            (visibility_modifier))
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))))

================================================================================
Functional interfaces: https://kotlinlang.org/docs/fun-interfaces.html
================================================================================

fun interface Authenticator {
  @Throws(IOException::class)
  fun authenticate(
    route: Route?,
    response: Response,
  ): Request?
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (function_declaration
        modifiers: (modifiers
          (annotation
            (constructor_invocation
              (user_type
                (type_identifier))
              (value_arguments
                (value_argument
                  (callable_reference
                    (user_type
                      (type_identifier))))))))
        name: (simple_identifier)
        parameters: (function_value_parameters
          (function_value_parameter
            parameter: (parameter
              name: (simple_identifier)
              type: (nullable_type
                type: (user_type
                  (type_identifier)))))
          (function_value_parameter
            parameter: (parameter
              name: (simple_identifier)
              type: (user_type
                (type_identifier)))))
        type: (nullable_type
          type: (user_type
            (type_identifier)))))))

================================================================================
Companion object without body
================================================================================

class A {
	companion object A
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (companion_object
        name: (simple_identifier)))))

================================================================================
Companion object without name
================================================================================

class A {
	public companion object
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (companion_object
        modifiers: (modifiers
          (visibility_modifier))))))


================================================================================
Explicit primary constructor
================================================================================

class Foo private constructor(a: Int) {
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    (primary_constructor
      modifiers: (modifiers
        (visibility_modifier))
      (class_parameters
        (class_parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    body: (class_body)))

================================================================================
Class without body followed by function modifiers
================================================================================

expect class AnimatedImage

expect fun loadAnimatedImage(path: String): AnimatedImage

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (platform_modifier))
    name: (simple_identifier))
  (function_declaration
    modifiers: (modifiers
      (platform_modifier))
    name: (simple_identifier)
    parameters: (function_value_parameters
      (function_value_parameter
        parameter: (parameter
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    type: (user_type
      (type_identifier))))
